# hwc

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: build-and-lint.yml
helloworld/: CMakeLists.txt
hw2/: bracketBalance.c  substring.c  zerosInArray.c
hw2/task1/: CMakeLists.txt
hw2/task2/: CMakeLists.txt  substring.c
hw2/task3/: CMakeLists.txt
hw5/: CMakeLists.txt  counting.c  main.c  sortList.c  sortList.h  tests.c
src/counting/: counting.c
src/hw1/: 2_multiplications.c  array.c  division.c  lucky_tickets  lucky_tickets.c
src/hw1/task1/: 2_multiplications.c  CMakeLists.txt
src/hw1/task2/: CMakeLists.txt  array.c
src/hw1/task3/: CMakeLists.txt
src/hw1/task4/: CMakeLists.txt
src/hw2/: bracket_balance.c  substring.c  zeros_in_array.c
src/hw3/: -Wall  33  CMakeLists.txt  README.md  mainProgram.c  sort  sort.c  sort.s  sorting.c  sorting.h  sorting.s
src/hw4/: CMakeLists.txt  advancedBracketBalance.c  sortingStation.c  stack.c  stack.h
src/hw4/SortingStation/: CMakeLists.txt  stack.c  stack.h
src/hw8/: CMakeLists.txt  binary.c  binary.h  main.c  tests.c
src/hw9/: CMakeLists.txt  double.c  double.h  main.c  tests.c
src/test1/: gnomeSort.c  palindrome.c  sumEvenFib.c
src/test2/binaryCompare/: CMakeLists.txt  binary.c  binary.h  main.c  tests.c
src/test2/list/: CMakeLists.txt  list.c  list.h  main.c  queue.c  queue.h  tests.c
src/test3/task1/: main.c  setOfNumbers.c  setOfNumbers.h
src/test3/task2/: main.c  replaceByMin.c  replaceByMin.h  test_replaceByMin.c
src/test_3/task1/: CMakeLists.txt  main.c  setOfNumbers.c  (+1 more)
(+10 files in other folders)
