cmake_minimum_required(VERSION 3.25)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

project(HwC)

# add_subdirectory(src/counting/)
# add_subdirectory(src/hw4/)
# add_subdirectory(src/hw4/SortingStation/)
# add_subdirectory(helloworld/)
# add_subdirectory(hw5/)

add_compile_options(-Wall -Wextra -Wpedantic)